--- a/.github/workflows/docker-arm64.yml
+++ b/.github/workflows/docker-arm64.yml
@@ -1,39 +1,36 @@
-name: Build and Push Redash ARM64 Image
+name: Build & Push Redash ARM64
 
 on:
   push:
-    branches:
-      - main
-    tags:
-      - 'v*'
+    branches: [main]  # or your default branch
+  workflow_dispatch:
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up QEMU for ARM emulation
-        uses: docker/setup-qemu-action@v2
-        with:
-          platforms: arm64
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_PAT }}
 
-      - name: Build and push ARM64 image
-        uses: docker/build-push-action@v4
+      - name: Build and push Redash ARM64 image
+        uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./Dockerfile  # or the correct path to your Dockerfile
           platforms: linux/arm64
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/redash-arm64:latest
