--- a/.github/workflows/docker-arm64.yml
+++ b/.github/workflows/docker-arm64.yml
@@ -2,7 +2,7 @@ name: Build & Push Redash ARM64
 
 on:
   push:
-    branches: [main]  # or your default branch
+    branches: [main]
   workflow_dispatch:
 
 jobs:
@@ -15,6 +15,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: linux/arm64
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -30,7 +35,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile  # or the correct path to your Dockerfile
+          file: ./Dockerfile
           platforms: linux/arm64
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/redash-arm64:latest
