--- a/.github/workflows/docker-arm64.yml
+++ b/.github/workflows/docker-arm64.yml
@@ -2,36 +2,70 @@ name: Build & Push Redash ARM64
 
 on:
   push:
-    branches: [main]
+    branches: [main] # Adjust as needed
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
-  build-and-push:
+  build-redash-arm64:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+    timeout-minutes: 60
 
     steps:
-      - name: Checkout code
+      # Step 1: Checkout repository
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-        with:
-          platforms: linux/arm64
-
+      # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to GitHub Container Registry
+      # Step 3: Log in to GitHub Container Registry
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
 
-      - name: Build and push Redash ARM64 image
+      # Step 4: Cache Docker layers
+      - name: Configure Docker layer cache
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      # Step 5: Build frontend stage only (optional, for debug/fail fast)
+      - name: Test Frontend Build (Node + Yarn)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          target: frontend-build
+          platforms: linux/arm64
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+          load: true # optional debug only
+
+      # Step 6: Build backend stage only (optional, for debug/fail fast)
+      - name: Test Backend Build (Python deps)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          target: backend-build
+          platforms: linux/arm64
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+          load: true # optional debug only
+
+      # Step 7: Build and push final Redash ARM64 image
+      - name: Build & Push Redash ARM64 Docker Image
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -39,3 +73,11 @@ jobs:
           platforms: linux/arm64
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/redash-arm64:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+
+      # Step 8: Save new build cache
+      - name: Move buildx cache for next run
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
