--- a/.github/workflows/docker-arm64.yml
+++ b/.github/workflows/docker-arm64.yml
@@ -2,7 +2,7 @@ name: Build & Push Redash ARM64
 
 on:
   push:
-    branches: [main] # Adjust as needed
+    branches: [main]
   workflow_dispatch:
 
 permissions:
@@ -15,15 +15,12 @@ jobs:
     timeout-minutes: 60
 
     steps:
-      # Step 1: Checkout repository
-      - name: Checkout Code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Step 3: Log in to GitHub Container Registry
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -31,40 +28,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
 
-      # Step 4: Cache Docker layers
-      - name: Configure Docker layer cache
-        uses: actions/cache@v4
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      # Step 5: Build frontend stage only (optional, for debug/fail fast)
-      - name: Test Frontend Build (Node + Yarn)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          target: frontend-build
-          platforms: linux/arm64
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
-          load: true # optional debug only
-
-      # Step 6: Build backend stage only (optional, for debug/fail fast)
-      - name: Test Backend Build (Python deps)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          target: backend-build
-          platforms: linux/arm64
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
-          load: true # optional debug only
-
-      # Step 7: Build and push final Redash ARM64 image
       - name: Build & Push Redash ARM64 Docker Image
         uses: docker/build-push-action@v5
         with:
@@ -73,11 +36,3 @@ jobs:
           platforms: linux/arm64
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/redash-arm64:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
-
-      # Step 8: Save new build cache
-      - name: Move buildx cache for next run
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
